# cmc

./: .gitignore  CGEN.C  CMIN.L  CMIN.Y  CMakeLists.txt  Cargo.toml  GLOBALS.H  LICENSE  MAIN.C  MAKEFILE  Makefile  PARSE.H  README.md  SAMPLE.cm  SCAN.C  SCAN.H  SYMTAB.H  UTIL.C  UTIL.H  analyze.c  analyze.h  arrtest.cm  build.rs  cbindgen.toml  cmin.l  cmin.tab.c  cmin.tab.h  cmin.y  code.c  code.h  fat.txt  globals.h  lex.yy.c  main.c  makefile  mdc.cm  parse.c  parse.h  parse.y  rust.h  (+8 more)
.cargo/: config
rust/: Cargo.toml  build.rs  cbindgen.toml  wrapper.h
rust/src/: assembly.rs  binary.rs  lib.rs
src/: analyze.c  analyze.h  assembly.rs  binary.rs  code.c  code.h  common.rs  intermediate.c  intermediate.h  lib.rs  main.c  parse.h  parse.y  rust.h  rust.rs  scan.h  scan.l  symtab.c  symtab.h  wrapper.h
src/common/: ffi.rs  globals.h  util.c  util.h
test/: arr.cm  cod_intermediario.cm  fat.cm  fib.cm  func  func.cm  mdc.cm  mdc_erro_lexico.cm  mdc_erro_semantico.cm  mdc_erro_semantico1.cm  mdc_erro_semantico4.cm  mdc_erro_semantico6.cm  mdc_erro_sintatico.cm  muitos_param.cm  ordenar.cm  output_em_func.cm  output_func.cm  recur.cm  simples.cm  sort.cm  sum.cm  teste_final.cm  while.cm  while_if_else.cm
test/erros/: mdc_erro_lexico.cm  mdc_erro_semantico2.cm  mdc_erro_semantico3.cm  mdc_erro_semantico5.cm
tests/: arr.cm  array.cm  conta_complexa.cm  cube_volume.cm  factorial.cm  fatocel.cm  fibonacci.cm  fn_inside_fn.cm  funcao_dupla.cm  gcd.cm  gdc.cm  if.cm  math.cm  math2.cm  max_three.cm  mod.cm  muitos_param.cm  multiple_io.cm  multiple_params.cm  ordenar.cm  output_inside_fn.cm  recursion.cm  simple_io.cm  sort.cm  square_area.cm  super_simples.cm  while.cm  while_if_else.cm
tests/errors/: gcd_lexical_error.cm  gcd_semantic_error1.cm  gcd_semantic_error2.cm  gcd_semantic_error3.cm  gcd_semantic_error4.cm  gcd_semantic_error5.cm  gcd_semantic_error6.cm  gcd_semantic_error7.cm  gcd_syntax_error.cm  mdc_erro_semantico.cm
