cargo-features = ["profile-rustflags"]

[package]
name = "rust"
version = "0.9.0"
edition = "2021"

[profile.release]
strip = "debuginfo"
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
rustflags = ["-Zsanitizer=address"]

[lib]
crate-type = ["staticlib"]

[build-dependencies]
bindgen = "0.60.1"
