cargo-features = ["profile-rustflags"]

[package]
name = "rust"
version = "0.10.1"
edition = "2021"
description = "Parte escrita em rust do compilador cmc"
authors = ["Miguel <miguel.taciano@unifesp.br>"]
repository = "https://github.com/mtaciano/compilador/"
readme = "README.md"
license = "MIT"
publish = false

# Configurações usadas durante `make release`
[profile.release]
strip = "debuginfo"
panic = "abort"
lto = true
codegen-units = 1

# Configurações usadas durante `make debug`
[profile.dev]
rustflags = ["-Zsanitizer=address"]

[lib]
path = "src/rust.rs"
crate-type = ["staticlib"]
test = true

[dependencies]
libc = "0.2"
